src/objects/DMS_Question__c.object
<CustomObject>
    <fields>
        <fullName>DMS_Survey__c</fullName>
        <description>Survey header object</description>
        <inlineHelpText>Survey header object</inlineHelpText>
        <label>DMS Survey</label>
        <referenceTo>DMS_Survey__c</referenceTo>
        <relationshipLabel>DMS Question</relationshipLabel>
        <relationshipName>DMS_Question</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related parent question</description>
        <inlineHelpText>Link to related parent question</inlineHelpText>
        <label>Parent Question</label>
        <referenceTo>DMS_Question__c</referenceTo>
        <relationshipLabel>DMS Question</relationshipLabel>
        <relationshipName>DMS_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <picklist>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DMS Question</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>DMS Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMS Question</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>